Fix T47271: Vertex Group to Selected missing update